@@ -748,7 +748,6 @@ str ALGprojecttail(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str ALGrangejoin(bat *result, const bat *lid, const bat *rlid, const bat *rhid, const bit *li, const bit *hi);
 str ALGrangejoin2(bat *l, bat *r, const bat *lid, const bat *rlid, const bat *rhid, const bit *li, const bit *hi);
 str ALGreuse(bat *ret, const bat *bid);
-str ALGrevert(bat *result, const bat *bid);
 str ALGsample(bat *result, const bat *bid, const int *param);
 str ALGselect(bat *result, const bat *bid, ptr low, ptr high);
 str ALGselect1(bat *result, const bat *bid, ptr value);
@@ -874,7 +873,6 @@ str BKCpersists(void *r, const bat *bid, const bit *flg);
 str BKCreuseBAT(bat *ret, const bat *bid, const bat *did);
 str BKCreuseBATmap(bat *ret, const bat *bid, const bat *did);
 str BKCreverse(bat *ret, const bat *bid);
-str BKCrevert(bat *ret, const bat *bid);
 str BKCsave(bit *res, const char *const *input);
 str BKCsave2(void *r, const bat *bid);
 str BKCsetAccess(bat *res, const bat *bid, const char *const *param);
