@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Wed Sep  9 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.revert.
+
 * Tue Sep  8 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed bat.order and bat.orderReverse functions.
 
